# ModelicaStandardLibrary

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.mos  .travis.py  .travis.yml  CNAME  CONTRIBUTING.md  Complex.mo  Constants.mo  Documentation.html  Icons.mo  LICENSE  Magnetic.mo  Math.mo  Matrices.mo  ModelicaTestConversion4.mo  ModelicaTestConversion5.mo  ModelicaTestOverdetermined.mo  ObsoleteModelica3.mo  ObsoleteModelica4.mo  README.md  SECURITY.md  SIunits.mo  StateGraph.mo  Streams.mo  Strings.mo  TestComplex.mo  index-new.html  index.html  info.json  oldredirect.html  om  package.mo  readme.txt  robots.txt  sitemap.xml
.CI/: .travis.mos  .travis.py  CountClasses.mos  CountClasses.py  Jenkinsfile  check_deprecated_line_color.py  check_html.py  compiler.sh
.github/: checkTags.json  check_deprecated_line_color.json  labeler.yml  moparser.json  tidyHTML.json
Blocks/: Continuous.mo  Discrete.mo  Examples.mo  Interfaces.mo  Logical.mo  Math.mo  Nonlinear.mo  Routing.mo  Sources.mo  Tables.mo  Types.mo  package.mo
C-Sources/: ModelicaInternal.c  ModelicaLicense.txt  ModelicaStrings.c  ModelicaStrings.h  ModelicaTables.h  ModelicaTables_Dymola.c  win32_dirent.c  win32_dirent.h
Documentation/: ChangeNotes1.5.html
Electrical/: ConvertMachines_from_1.4_to_1.6.mos  Digital.mo  Machines.mo  MultiPhase.mo  package.mo
Fluid/: package.mo
Images/: _readme.txt
Math/: Matrices.mo  package.mo
Mechanics/: Rotational.mo  Translational.mo  package.mo
Media/: Air.mo  (+3 more)
Modelica/Resources/BuildProjects/autotools/: Makefile.am  README  configure.ac
(+53895 files in other folders)
